--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Mona Sans", Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -26,4 +26,14 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@layer fonts {
+  @font-face {
+    font-family: "Mona Sans";
+    src: url("../fonts/mona-sans.woff2") format("woff2 supports variations"),
+      url("../fonts/mona-sans.woff2") format("woff2 variations");
+    font-weight: 200 900;
+    font-stretch: 75% 125%;
+  }
 }
