feat: home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,12 @@ a {
   text-decoration: none;
 }
 
+main {
+  display: grid;
+  gap: 5rem;
+  padding-block: 2rem;
+}
+
 @layer fonts {
   @font-face {
     font-family: "Mona Sans";
