--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,8 @@ p {
   @font-face {
     font-family: "Mona Sans";
     src: url("../fonts/mona-sans.woff2") format("woff2 supports variations"),
-      url("../fonts/mona-sans.woff2") format("woff2 variations");
+      url("../fonts/mona-sans.woff2") format("woff2 variations"),
+      url("../fonts/mona-sans.ttf") format("truetype");
     font-weight: 200 900;
     font-stretch: 75% 125%;
   }
