--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,15 @@ main {
   padding-block: 2rem;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
 button {
   font-family: "Mona Sans", Arial, Helvetica, sans-serif;
 }
